[package]
name = "system-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { package = "gtk4", version = "0.9" }
adw = { package = "libadwaita", version = "0.7", features = ["v1_5"] }
relm4 = { version = "0.9", features = ["libadwaita"] }
zbus_systemd = { version = "0.26000.0", features = ["systemd1"] }
zbus = { version = "5.0", features = ["tokio"] }
tokio = { version = "1.0", features = ["full"] }
sysinfo = "0.33" # Current version for 2026